--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -11,5 +11,7 @@
         &quot;<%= review.comment %>&quot;
       </p>
     </li>
-    <% end %>
-  </ol>
+  <% end %>
+</ol>
+
+<%= link_to 'Write a Review', new_book_review_path(@book) %>
